8242544: CMD+ENTER key event crashes the application when invoked on dialog